# txtai.rs

./: Cargo.toml  README.md
examples/demo/src/: embeddings.rs  extractor.rs  labels.rs  main.rs  pipelines.rs
src/: api.rs  embeddings.rs  extractor.rs  lib.rs  translation.rs
