[package]
name = "txtai"
version = "5.5.0"
authors = ["NeuML"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/neuml/txtai.rs"
documentation = "https://github.com/neuml/txtai.rs"
homepage = "https://github.com/neuml/txtai.rs"
description = """
Semantic search and workflows in Rust
"""
keywords = ["search", "nlp", "machine-learning", "similarity"]
categories = ["algorithms", "api-bindings", "text-processing"]
edition = "2018"

[dependencies]
anyhow = "1.0.71"
enum-as-inner = { version = "0.3.3" }
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.8", features = ["full"] }
